syntax = "proto3";

package pkg;

option go_package = "server.v2;server";

import "google/protobuf/empty.proto";

service SSO {
  rpc RegisterNewUser (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc IsAdmin (AdminRequest) returns (AdminResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  int32 app_id = 3;
}

message LoginResponse {
  string token = 1;
}

message AdminRequest {
  int64 user_id = 1;
}

message AdminResponse {
  bool is_admin = 1;
}

service Blog {
  rpc CreateArticle (CreateRequest) returns (CreateResponse);
  rpc ShowMyArticle (ShowMyArticleRequest) returns (ShowMyArticleResponse);
  rpc ShowMyArticles (ShowMyArticlesRequest) returns (ShowArticlesResponse);
  rpc ShowAllArticles (google.protobuf.Empty) returns (ShowArticlesResponse);
  rpc EditArticle (EditRequest) returns (EditResponse);
  rpc SaveArticle (SaveRequest) returns (SaveResponse);
}

message CreateRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message CreateResponse {
  int64 article_id = 1;
}

message ShowMyArticleRequest {
  int64 article_id = 1;
  int64 user_id = 2;
}

message ShowMyArticleResponse {
  string title = 1;
  string text = 2;
  bool is_author = 3;
}

message Article {
  int64 article_id = 1;
  string title = 2;
  string text = 3;
}

message ShowMyArticlesRequest {
  int64 user_id = 1;
}

message ShowArticlesResponse {
  repeated Article article_data = 1;
}

message EditRequest {
  int64 user_id = 1;
  int64 article_id = 2;
}

message EditResponse {
  bool is_author = 1;
}

message SaveRequest {
  string title = 1;
  string text = 2;
}

message SaveResponse {
  bool is_saved = 1;
}
